--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.17
   expandable: ^5.0.1
-  image_picker: ^1.1.2
+  image_picker: 0.8.3+1
   http: ^1.3.0
   curved_navigation_bar: ^1.0.6
   pin_code_fields: ^8.0.1
@@ -62,6 +62,7 @@ dependencies:
   flutter_widget_from_html: ^0.15.2
   flutter_downloader: ^1.12.0
   open_file: ^3.5.10
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   flutter_test:
