--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.17
   expandable: ^5.0.1
-  image_picker: 0.8.3+1
+  image_picker: ^1.1.2
   http: ^1.3.0
   curved_navigation_bar: ^1.0.6
   pin_code_fields: ^8.0.1
