--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flutter_downloader: ^1.12.0
   open_file: ^3.5.10
   permission_handler: ^11.4.0
+  camera: ^0.11.1
 
 dev_dependencies:
   flutter_test:
